--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
@@ -3,6 +3,8 @@
 @{
 	var subCategoryNames = Model.Select(c => c.SubCategory.Name).Distinct().ToList();
 	var brands = Model.Select(b => b.Brand.Name).Distinct().ToList();
+	var id = Model.Select(m => m.MainCategory.Id);
+
 }
 <!-- SECTION -->
 <div class="section">
@@ -13,12 +15,14 @@
 			<!-- ASIDE -->
 			<div id="aside" class="col-md-3">
 				<form id="filterForm" method="GET" asp-area="" asp-controller="Store" asp-action="FilterProducts">
+					<input type="hidden" name="id" value="id" />
 					<!-- aside Widget -->
 					<div class="aside">
 						<h3 class="aside-title">Ilgili Kategoriler</h3>
 						<div class="checkbox-filter">
 							@foreach (var subCategoryName in subCategoryNames)
 							{
+							
 								<div class="input-checkbox">
 									<input type="checkbox" id="subcategory-@subCategoryName" name="subCategory" value="@subCategoryName">
 									<label for="subcategory-@subCategoryName">
