--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model List<ProductViewModel>
+﻿@model StoreViewModel
 <vc:navbar-of-main-cat></vc:navbar-of-main-cat>
-@{
-	var subCategoryNames = Model.Select(c => c.SubCategory.Name).Distinct().ToList();
-	var brands = Model.Select(b => b.Brand.Name).Distinct().ToList();
-	var id = Model.Select(m => m.MainCategory.Id);
 
+@if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+{
+    <div class="alert alert-danger" role="alert">
+        @ViewBag.ErrorMessage
+    </div>
 }
 <!-- SECTION -->
 <div class="section">
@@ -15,19 +16,19 @@
 			<!-- ASIDE -->
 			<div id="aside" class="col-md-3">
 				<form id="filterForm" method="GET" asp-area="" asp-controller="Store" asp-action="FilterProducts">
-					<input type="hidden" name="id" value="id" />
+					<input type="hidden" name="id" value="@Model.Products.FirstOrDefault()?.MainCategory.Id" />
 					<!-- aside Widget -->
 					<div class="aside">
 						<h3 class="aside-title">Ilgili Kategoriler</h3>
 						<div class="checkbox-filter">
-							@foreach (var subCategoryName in subCategoryNames)
+							@foreach (var subCategory in Model.SubCategories)
 							{
 							
 								<div class="input-checkbox">
-									<input type="checkbox" id="subcategory-@subCategoryName" name="subCategory" value="@subCategoryName">
-									<label for="subcategory-@subCategoryName">
+									<input type="checkbox" id="subcategory-@subCategory.Id" name="subCategory" value="@subCategory.Name">
+									<label for="subcategory-@subCategory.Id">
 										<span></span>
-										@subCategoryName
+										@subCategory.Name
 										<small>(120)</small>
 									</label>
 								</div>
@@ -61,13 +62,13 @@
 						<h3 class="aside-title">Markalar</h3>
 						<div class="checkbox-filter">
 
-							@foreach (var brand in brands)
+							@foreach (var brand in Model.Brands)
 							{
 								<div class="input-checkbox">
-									<input type="checkbox" id="brand-@brand" name="brand" value="@brand">
-									<label for="brand-@brand">
+									<input type="checkbox" id="brand-@brand.Id" name="brand" value="@brand.Name">
+									<label for="brand-@brand.Id">
 										<span></span>
-										@brand
+										@brand.Name
 										<small>(578)</small>
 									</label>
 								</div>
@@ -112,7 +113,7 @@
 				<!-- /store top filter -->
 				<!-- store products -->
 					<div class="row">
-				@foreach (var product in Model)
+				@foreach (var product in Model.Products)
 					{
 						<div class="col-md-4 col-xs-6">
 							<div class="product">
@@ -150,7 +151,7 @@
 				<!-- /store products -->
 				<!-- store bottom filter -->
 				<div class="store-filter clearfix">
-					<span class="store-qty">Showing 20-100 products</span>
+				
 					<ul class="store-pagination">
 						<li class="active">1</li>
 						<li><a href="#">2</a></li>
