--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using RhythmicRealm.Shared.ViewModels.ProductViewModels
 @using RhythmicRealm.Shared.ViewModels.BrandViewModels
 @using RhythmicRealm.Shared.ViewModels.MainCategoryViewModels
+@using RhythmicRealm.Shared.ViewModels.Others
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
