--- a/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
+++ b/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
@@ -511,6 +511,51 @@ textarea.input {
   border-radius: 0px 40px 40px 0px;
   
 }
+.brand-search {
+    padding: 15px 0px;
+}
+
+    .brand-search form {
+        position: relative;
+    }
+
+        .header-search form .input-select {
+            margin-right: -4px;
+            border-radius: 40px 0px 0px 40px;
+        }
+
+        .brand-search form .input {
+            width: calc(100% - 310px);
+            margin-right: -4px;
+        }
+
+.brand-search form .brand-search-btn {
+    height: 40px;
+    width: 100px;
+    background: #1e1f29;
+    color:#fff;
+    font-weight: 700;
+    border: none;
+ 
+}
+
+.buttons-grid{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
+
+.back-homepage-btn {
+    float: right;
+    color: black;
+    height: 40px;
+    width: 100px;
+    border:none;
+    cursor:pointer;
+    font-size:14px;
+}
+  
+
 
   
 
