advantageous products section on homepage  completed.

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 						<img style="height:250px" src="~/ui/img/new.png" alt="">
 					</div>
 					<div class="shop-body">
-						<h3>Yeni Ürünler</h3>
+						<h3>Koleksiyondaki Yeni Ürünler</h3>
 						<a asp-area="" asp-controller="Store" asp-action="ShowProductsOnCards" asp-route-id="1" class="cta-btn">Ürünlere Göz At<i class="fa fa-arrow-circle-right"></i></a>
 					</div>
 				</div>
@@ -27,7 +27,7 @@
 						<img style="height:250px" src="~/ui/img/top-selling.png" alt="">
 					</div>
 					<div class="shop-body">
-						<h3>Çok Satanlar</h3>
+						<h3>Avantajlı Ürünler</h3>
 						<a asp-area="" asp-controller="Store" asp-action="ShowProductsOnCards" asp-route-id="2" class="cta-btn">Ürünlere Göz At<i class="fa fa-arrow-circle-right"></i></a>
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="section-title">
-					<h3 class="title">Avantajlı Ürünler</h3>
+					<h3 class="title">Koleksiyon</h3>
 					
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 							</div>
 						</li>
 					</ul>
-					<h2 class="text-uppercase">Yeni Koleksiyon </h2>
+					<h2 class="text-uppercase">Yeni Ürünler </h2>
 					<p>Avantajlı Fiyatlar İle</p>
 					<a class="primary-btn cta-btn" href="#">Alışverişe Başla</a>
 				</div>
