--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/ShowProducts.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/ShowProducts.cshtml
@@ -9,7 +9,7 @@
 		<div class="row">
 			<div class="col-md-12 buttons-grid">
 				<div class="brand-search col-md-6" >
-					<form asp-area="" asp-controller="Home" asp-action="Search" method="get">
+					<form asp-area="" asp-controller="Store" asp-action="Search" method="get">
 
 						<input class="input" name="query" placeholder="Ürün ara... ">
 						<button type="submit" class="brand-search-btn">Ara</button>
