Adding to cart operations were given a short break. Message inbox and contact views have been created in the admin panel.

--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
@@ -211,7 +211,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="pages/mailbox/mailbox.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Contact" asp-action="Index" class="nav-link">
                                 <i class="fas fa-envelope-open-text"></i>
                                 <p>Tüm Mesajlar</p>
                             </a>
