--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,5 +5,7 @@
 @using RhythmicRealm.UI.Areas.Admin.AdminViewModels
 @using RhythmicRealm.Entity.Concrete.Identity
 @using RhythmicRealm.Shared.ViewModels.Identity
+@using RhythmicRealm.Shared.ViewModels.MessageViewModel
+@using RhythmicRealm.Shared.ViewModels.MessageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
