--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_StylesPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_StylesPartial.cshtml
@@ -12,5 +12,6 @@
 
 <!-- overlayScrollbars -->
 <link rel="stylesheet" href="~/admin/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+<link rel="stylesheet" href="~/admin/plugins/summernote/summernote-bs4.min.css">
 
 
