--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_SummerNotePartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_SummerNotePartial.cshtml
@@ -5,3 +5,10 @@
         height: 200
     })
 </script>
+
+<script>
+    $(function () {
+        //Add text editor
+        $('#compose-textarea').summernote()
+    })
+</script>
