--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/Inbox.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/Inbox.cshtml
@@ -83,12 +83,12 @@
                                                 </div>
                                             </td>
                                             <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a a asp-area="Admin" asp-controller="Contact" asp-action="GetContactDetails" asp-route-id="@item.Id">@item.SenderMail</a></td>
+                                            <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetInboxMessageDetails" asp-route-id="@item.Id">@item.SenderMail</a></td>
                                             <td class="mailbox-subject">
                                                 <b>@item.Subject</b> - @item.Content.Substring(0, 30)...
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">5 mins ago</td>
+                                            <td class="mailbox-date">@item.MessageDate</td>
                                         </tr>
                                     }
 
